// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PrivacyPolicy snapshot matches the rendered markup (dark) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-1lw2lci"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1k5c479-MuiPaper-root"
      style="--Paper-shadow: none;"
    >
      <div
        class="MuiBox-root css-1wxkees"
      />
      <div
        class="MuiBox-root css-oqkw4m"
      >
        <div
          class="MuiBox-root css-3b2wtl"
        >
          <div
            class="MuiBox-root css-1fexsnk"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1sdz7zf-MuiSvgIcon-root"
              data-testid="PrivacyTipOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m12 3.19 7 3.11V11c0 4.52-2.98 8.69-7 9.93-4.02-1.24-7-5.41-7-9.93V6.3zM12 1 3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5zm-1 6h2v2h-2zm0 4h2v6h-2z"
              />
            </svg>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-18ec6dc-MuiTypography-root"
          >
            Privacy Policy
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-hbw45i-MuiTypography-root"
          >
            How DocuThinker collects, uses, and protects your information.
          </p>
        </div>
        <div
          class="MuiBox-root css-u1z5uh"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-19em3t1-MuiTypography-root"
          >
            1. Introduction
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x8jngi-MuiTypography-root"
          >
            Welcome to DocuThinker App. This Privacy Policy explains how we collect, use, and protect your personal information when you use our website and services. Your privacy is important to us, and we are committed to ensuring that your personal information is handled securely and responsibly.
          </p>
          <h6
            class="MuiTypography-root MuiTypography-h6 css-19em3t1-MuiTypography-root"
          >
            2. Information We Collect
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x8jngi-MuiTypography-root"
          >
            We may collect the following types of information:
          </p>
          <ul
            style="margin-bottom: 3px; padding-left: 20px; list-style-type: disc;"
          >
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Your uploaded documents (PDF or DOCX files) - we will only process them to provide our services. We may store them securely in our databases so that signed in users can access them later. We do not share your documents with third parties and do not store documents of users who are not signed in.
              </p>
            </li>
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Usage data (IP address, browser type, time spent on site, etc.) - This information is collected by Google Analytics and helps us understand how users interact with our website.
              </p>
            </li>
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Personal information (name, email address) - We collect this information when you sign up for an account. We use it to provide our services only.
              </p>
            </li>
          </ul>
          <h6
            class="MuiTypography-root MuiTypography-h6 css-19em3t1-MuiTypography-root"
          >
            3. How We Use Your Information
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x8jngi-MuiTypography-root"
          >
            We use the information we collect to:
          </p>
          <ul
            style="margin-bottom: 3px; padding-left: 20px; list-style-type: disc;"
          >
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Provide and operate our services.
              </p>
            </li>
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Improve, personalize, and expand our website and services.
              </p>
            </li>
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Communicate with you about updates, promotions, and changes to our services.
              </p>
            </li>
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Comply with legal obligations and ensure the security of our platform.
              </p>
            </li>
          </ul>
          <h6
            class="MuiTypography-root MuiTypography-h6 css-19em3t1-MuiTypography-root"
          >
            4. How We Protect Your Data
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x8jngi-MuiTypography-root"
          >
            We implement various security measures to protect your personal information. These measures include secure data storage, encryption, and access controls. However, no data transmission over the internet is 100% secure, and we cannot guarantee the absolute security of your information.
          </p>
          <h6
            class="MuiTypography-root MuiTypography-h6 css-19em3t1-MuiTypography-root"
          >
            5. Third-Party Services
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x8jngi-MuiTypography-root"
          >
            We may use third-party services (such as Google Drive and Dropbox) to facilitate file uploads and other services. These third parties may have their own privacy policies governing how they handle your data. We encourage you to review the privacy policies of any third-party services you use through our platform.
          </p>
          <h6
            class="MuiTypography-root MuiTypography-h6 css-19em3t1-MuiTypography-root"
          >
            6. Your Data Rights
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x8jngi-MuiTypography-root"
          >
            You have the right to:
          </p>
          <ul
            style="margin-bottom: 3px; padding-left: 20px; list-style-type: disc;"
          >
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Access, update, or delete your personal information.
              </p>
            </li>
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Withdraw consent for data processing where consent was previously given.
              </p>
            </li>
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                File a complaint with your local data protection authority if you believe your rights are violated. But, please try to reach out to us first so we can address your concerns.
              </p>
            </li>
          </ul>
          <h6
            class="MuiTypography-root MuiTypography-h6 css-19em3t1-MuiTypography-root"
          >
            7. Changes to This Privacy Policy
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x8jngi-MuiTypography-root"
          >
            We may update this Privacy Policy from time to time to reflect changes in our practices or applicable laws. We will notify you of any significant changes by posting the updated policy on our website.
          </p>
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1rvc9ge-MuiTypography-root"
          >
            8. Contact Us
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x8jngi-MuiTypography-root"
          >
            If you have any questions about this Privacy Policy or how we handle your personal information, please contact us at: 
            <a
              href="mailto:hoangson091104@gmail.com"
              style="color: white;"
            >
              hoangson091104@gmail.com.
            </a>
          </p>
          <div
            style="height: 20px; border-bottom: 1px solid rgb(240, 240, 240); margin-bottom: 20px;"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 css-1r7da92-MuiTypography-root"
          >
            Made with ❤️ by 
            <a
              href="https://sonnguyenhoang.com"
              style="color: rgb(245, 124, 0);"
            >
              Son Nguyen
            </a>
             in 2024. Thank you for visiting DocuThinker! 🚀
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PrivacyPolicy snapshot matches the rendered markup (light) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-ctpx7q"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1hm4vh1-MuiPaper-root"
      style="--Paper-shadow: none;"
    >
      <div
        class="MuiBox-root css-1wxkees"
      />
      <div
        class="MuiBox-root css-oqkw4m"
      >
        <div
          class="MuiBox-root css-3b2wtl"
        >
          <div
            class="MuiBox-root css-1fexsnk"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1sdz7zf-MuiSvgIcon-root"
              data-testid="PrivacyTipOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m12 3.19 7 3.11V11c0 4.52-2.98 8.69-7 9.93-4.02-1.24-7-5.41-7-9.93V6.3zM12 1 3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5zm-1 6h2v2h-2zm0 4h2v6h-2z"
              />
            </svg>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ysk6e4-MuiTypography-root"
          >
            Privacy Policy
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-br0cs1-MuiTypography-root"
          >
            How DocuThinker collects, uses, and protects your information.
          </p>
        </div>
        <div
          class="MuiBox-root css-1s58obv"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-18ic5l3-MuiTypography-root"
          >
            1. Introduction
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x8jngi-MuiTypography-root"
          >
            Welcome to DocuThinker App. This Privacy Policy explains how we collect, use, and protect your personal information when you use our website and services. Your privacy is important to us, and we are committed to ensuring that your personal information is handled securely and responsibly.
          </p>
          <h6
            class="MuiTypography-root MuiTypography-h6 css-18ic5l3-MuiTypography-root"
          >
            2. Information We Collect
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x8jngi-MuiTypography-root"
          >
            We may collect the following types of information:
          </p>
          <ul
            style="margin-bottom: 3px; padding-left: 20px; list-style-type: disc;"
          >
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Your uploaded documents (PDF or DOCX files) - we will only process them to provide our services. We may store them securely in our databases so that signed in users can access them later. We do not share your documents with third parties and do not store documents of users who are not signed in.
              </p>
            </li>
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Usage data (IP address, browser type, time spent on site, etc.) - This information is collected by Google Analytics and helps us understand how users interact with our website.
              </p>
            </li>
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Personal information (name, email address) - We collect this information when you sign up for an account. We use it to provide our services only.
              </p>
            </li>
          </ul>
          <h6
            class="MuiTypography-root MuiTypography-h6 css-18ic5l3-MuiTypography-root"
          >
            3. How We Use Your Information
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x8jngi-MuiTypography-root"
          >
            We use the information we collect to:
          </p>
          <ul
            style="margin-bottom: 3px; padding-left: 20px; list-style-type: disc;"
          >
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Provide and operate our services.
              </p>
            </li>
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Improve, personalize, and expand our website and services.
              </p>
            </li>
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Communicate with you about updates, promotions, and changes to our services.
              </p>
            </li>
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Comply with legal obligations and ensure the security of our platform.
              </p>
            </li>
          </ul>
          <h6
            class="MuiTypography-root MuiTypography-h6 css-18ic5l3-MuiTypography-root"
          >
            4. How We Protect Your Data
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x8jngi-MuiTypography-root"
          >
            We implement various security measures to protect your personal information. These measures include secure data storage, encryption, and access controls. However, no data transmission over the internet is 100% secure, and we cannot guarantee the absolute security of your information.
          </p>
          <h6
            class="MuiTypography-root MuiTypography-h6 css-18ic5l3-MuiTypography-root"
          >
            5. Third-Party Services
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x8jngi-MuiTypography-root"
          >
            We may use third-party services (such as Google Drive and Dropbox) to facilitate file uploads and other services. These third parties may have their own privacy policies governing how they handle your data. We encourage you to review the privacy policies of any third-party services you use through our platform.
          </p>
          <h6
            class="MuiTypography-root MuiTypography-h6 css-18ic5l3-MuiTypography-root"
          >
            6. Your Data Rights
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x8jngi-MuiTypography-root"
          >
            You have the right to:
          </p>
          <ul
            style="margin-bottom: 3px; padding-left: 20px; list-style-type: disc;"
          >
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Access, update, or delete your personal information.
              </p>
            </li>
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                Withdraw consent for data processing where consent was previously given.
              </p>
            </li>
            <li>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ehd6uz-MuiTypography-root"
              >
                File a complaint with your local data protection authority if you believe your rights are violated. But, please try to reach out to us first so we can address your concerns.
              </p>
            </li>
          </ul>
          <h6
            class="MuiTypography-root MuiTypography-h6 css-18ic5l3-MuiTypography-root"
          >
            7. Changes to This Privacy Policy
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x8jngi-MuiTypography-root"
          >
            We may update this Privacy Policy from time to time to reflect changes in our practices or applicable laws. We will notify you of any significant changes by posting the updated policy on our website.
          </p>
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1vfl5cw-MuiTypography-root"
          >
            8. Contact Us
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x8jngi-MuiTypography-root"
          >
            If you have any questions about this Privacy Policy or how we handle your personal information, please contact us at: 
            <a
              href="mailto:hoangson091104@gmail.com"
              style="color: black;"
            >
              hoangson091104@gmail.com.
            </a>
          </p>
          <div
            style="height: 20px; border-bottom: 1px solid rgb(240, 240, 240); margin-bottom: 20px;"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 css-1r7da92-MuiTypography-root"
          >
            Made with ❤️ by 
            <a
              href="https://sonnguyenhoang.com"
              style="color: rgb(245, 124, 0);"
            >
              Son Nguyen
            </a>
             in 2024. Thank you for visiting DocuThinker! 🚀
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
